--- a/jquery/04mouseEvent/css/style.css
+++ b/jquery/04mouseEvent/css/style.css
@@ -1,15 +1,58 @@
+* {
+    margin: 0;
+    padding: 0;
+}
 
-*{margin:0; padding:0;}
-ul, li{list-style:none;}
+ul,
+li {
+    list-style: none;
+}
 
-#wrap{width:800px;margin:0 auto;}
-#all{width:555px; height:119px; position:relative;margin:0 auto;}
-#all p{position:absolute; top:50px;}
-#prev{left:-12px;}
-#next{right:-12px;}
-#bigImage{width:800px; margin:0 auto;}
-#show_view{width:555px; height:119px;/*overflow:hidden; */}
+#wrap {
+    width: 800px;
+    margin: 0 auto;
+}
 
-ul{width: 950px; }
-li{float:left; padding:5px; background:#000;}
+#all {
+    width: 555px;
+    height: 119px;
+    position: relative;
+    margin: 0 auto;
+}
+
+#all p {
+    position: absolute;
+    top: 50px;
+}
+
+#prev {
+    left: -12px;
+}
+
+#next {
+    right: -12px;
+}
+
+#bigImage {
+    width: 800px;
+    margin: 0 auto;
+}
+
+#show_view {
+    width: 555px;
+    height: 119px;
+    overflow: hidden;
+}
+
+ul {
+    width: 950px;
+}
+
+li {
+    float: left;
+    padding: 5px;
+    background: #000;
+}
+
+
 /*img:179px;*/
