--- a/jquery/07gallerybasic/css1/modal.css
+++ b/jquery/07gallerybasic/css1/modal.css
@@ -1,8 +1,32 @@
 @charset "UTF-8";
+
 /* CSS Document */
 
-ul{width:700px; }
-ul li{float:left; margin:10px;}
+ul {
+    width: 700px;
+}
+
+ul li {
+    float: left;
+    margin: 10px;
+}
+
 
 /*추가하기*/
 
+#back {
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, .7);
+    display: none;
+}
+
+#main {
+    position: fixed;
+    left: 50%;
+    top: 50%;
+    display: none;
+}
