--- a/CSS/lesson01/02responsible/03mediaLayout/css/layout.css
+++ b/CSS/lesson01/02responsible/03mediaLayout/css/layout.css
@@ -1,10 +1,44 @@
 @charset "utf-8";
+/* auto, 100% */
+img{max-width: 100%}
 
+body{
+    background-color: #666;
+}
 
+article{
+    width: 96%/* 800px */;
+    margin: 0 auto;
+    background-color: #fff;
+}
 
+article>header{
+    margin-bottom: 25px;
+}
 
+section{
+    width: 97.5%/* 780px */;
+    margin: 0 auto 3.5%/* 25px */;
+}
 
+section>h4{
+    margin-bottom: 25px;
+    font: bold 1.5em '나눔고딕', sans-serif;
+}
 
+section>p{
+    column-count: 3;
+    column-rule: 1px solid red;
+    line-height: 1.6;
+}
 
+footer>ul{
+    width: 75%/* 600px */;
+    margin: 0 auto;
+    display: flex;
+    flex-wrap: wrap;
+}
 
-
+footer>ul>li{
+    width: 50%;
+}
