--- a/CSS/lesson02/css/style.css
+++ b/CSS/lesson02/css/style.css
@@ -89,7 +89,7 @@ nav .close>span{
     height: 2px;
     background-color: #fff;
     position: absolute;
-    left: 0; top: 0;
+    left: 0; top: 50%;
 }
 
 nav .close>span:first-child{
@@ -102,6 +102,7 @@ p#btn{
     display: none;
     width: 44px; height: 44px;
     position: absolute; right: 20px; top: 20px;
+    z-index: 800;
     /* background-color: red; */
 }
 
@@ -248,7 +249,7 @@ p#btn span:nth-child(5){top: 88%;}
     width: 100%;
     height: 30px;
     background: #000 url('../images/bar.gif') no-repeat left top;
-    background-size: 80%;
+    background-size: 80% 100%;
     text-indent: -99999px;
 }
 #skill>ul>li:nth-child(2)>span{
@@ -359,12 +360,12 @@ p#btn span:nth-child(5){top: 88%;}
     width: 100%;
     height: 50px;
     border: 0;
-    text-indent: 10px;
+    text-indent: 25px;
     box-sizing: border-box;
 }
 #box04 textarea{
     height: 60px;
-    padding: 10px 0;
+    padding: 18px 0;
 }
 
 #box04 p>input[type="submit"]{
@@ -375,6 +376,7 @@ p#btn span:nth-child(5){top: 88%;}
     color: #fff;
     font-size: 24px;
     background-color: #f69d20;
+    text-indent: 0;
     float: right;
 }
 #footerWrap{
@@ -383,4 +385,112 @@ p#btn span:nth-child(5){top: 88%;}
     text-align: center;
     color: #fff;
     font-style: 14px;
+}
+
+/* aside: submenu */
+aside>ul{
+    position: fixed;
+    right: 25px;
+    top: 50%;
+    z-index: 200;
+
+}
+aside>ul>li{
+    margin-bottom: 25px;
+}
+aside>ul>li>a{
+    display: block;
+    width: 45px; height: 45px;
+    border-radius: 50%;
+    background-color: #fff;
+    box-shadow: 2px 2px 3px rgba(0, 0, 0, 0.8);
+    text-indent: -9999px;
+}
+aside>ul>li>a:hover{
+    text-indent: 0;
+    background-color: #ffbcd1;
+}
+aside>#top{
+    position: fixed;
+    right: 25px; bottom: 35px;
+    width: 45px; height: 45px;
+    line-height: 45px;
+    z-index: 50;
+}
+aside>#top>a{
+    display: block;
+    width: 45px; height: 45px;
+    line-height: 45px;
+    text-align: center;
+    background-color: #ddd;
+    color: red;
+}
+
+/* modal */
+#modal{
+    display: none;
+    position: fixed;
+    left: 0; top: 0;
+    width: 100%; height: 100%;
+    background-color: rgba(0, 0, 0, 0.9);
+    z-index: 300;
+}
+#modal>p{
+    position: absolute;
+    right: 100px; top: 100px;
+    width: 35px; height: 35px;
+}
+#modal>p>span{
+    display: block;
+    position: absolute;
+    width: 100%; height: 2px;
+    left: 0; top: 50%;
+    background-color: #fff;
+}
+
+#modal>p>span:nth-child(1){
+    transform: rotate(-135deg) translateX(0);
+}
+#modal>p>span:nth-child(2){
+    transform: rotate(-45deg) translateX(0);
+}
+#modal>div{
+    position: fixed;
+    left: 50%; top: 50%;
+    width: 980px;
+    padding: 35px;
+    background-color: #ffbcd1;
+    /* transform: translate(-50%, -50%); 흔들릴 수 있다, 그래서 이렇게 큰 구조에서는 잘 안쓴다*/
+    margin: -300px 0 0 -490px;
+    overflow: hidden;
+}
+
+#modal>div>h4{
+    text-align: center;
+    font: bold 18px '나눔고딕', sans-serif;
+    color: #666;
+    margin-bottom: 36px;
+}
+#modal>div>figure{
+    width: 40%;
+    float: left;
+}
+#modal>div>ul{
+    width: 50%;
+    float: right;
+}
+#modal>div>ul>li{
+    margin-bottom: 20px;
+    border-bottom: 1px solid #666;
+    display: flex;   
+    line-height: 30px;
+}
+
+#modal>div>ul>li>dfn{
+    display: block;
+    width: 25%;
+}
+#modal>div>ul>li>span{
+    display: block;
+    
 }
